# borrowd

./: .gitignore  .pre-commit-config.yaml  manage.py  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
borrowd/: asgi.py  wsgi.py
borrowd/config/: base.py
borrowd_groups/: forms.py  models.py  signals.py  urls.py  views.py
borrowd_groups/migrations/: 0005_borrowdgroup_perms_group.py  0008_backfill_creator_moderator_memberships.py  0009_borrowdgroup_deleted_at_borrowdgroup_deleted_by.py  0009_fix_creator_perms_group_naming.py  0009_merge_20260402_0209.py  0010_alter_borrowdgroup_name_and_more.py  0011_merge_20260414_1406.py
borrowd_groups/tests/: test_group_deletion.py  test_group_duplicate_group_name.py  test_group_permissions.py  test_membership_approval_flow.py  test_users_leaving_groups.py
borrowd_items/: card_helpers.py  forms.py  models.py  signals.py  views.py
borrowd_items/migrations/: 0015_alter_item_status.py  0016_audit_1.py  0016_item_created_at_item_created_by_item_deleted_at_and_more.py  0017_audit_2.py  0018_audit_3.py
borrowd_items/templatetags/: time_filters.py
borrowd_items/tests/: test_card_helpers.py  test_item_categories.py  (+3 more)
borrowd_notifications/: tests.py
borrowd_users/: adapters.py  models.py  signals.py  system.py  urls.py  views.py
borrowd_web/: urls.py  views.py
docs/: CONTRIBUTING.md
templates/: 403.html  404.html  500.html  base.html
tests/: test_borrowing_flows.py  test_group_based_item_permissions.py
(+114 files in other folders)
